--- a/cas_demo1/src/main/resources/application.properties
+++ b/cas_demo1/src/main/resources/application.properties
@@ -1,29 +1,15 @@
-#the common configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/pinyougoudb?useUnicode=true&characterEncoding=utf-8
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123456
+#CAS\u670D\u52A1\u5730\u5740
+cas.server.host.url=https://leannain.com:8443/cas
+#CAS\u670D\u52A1\u767B\u5F55\u5730\u5740
+cas.server.host.login_url=${cas.server.host.url}/login
+#CAS\u670D\u52A1\u767B\u51FA\u5730\u5740
+cas.server.host.logout_url=${cas.server.host.url}/logout?service=${app.server.host.url}
+#\u5E94\u7528\u8BBF\u95EE\u5730\u5740
+app.server.host.url=http://leannain.com:8081
+#\u5E94\u7528\u767B\u5F55\u5730\u5740
+app.login.url=/login
+#\u5E94\u7528\u767B\u51FA\u5730\u5740
+app.logout.url=/logout
 
-mybatis-plus.type-aliases-package= com.example.demo.entity
-mybatis-plus.mapper-locations=classpath:/com/example/demo/mapper/*Mapper.xml
-mybatis-plus.global-config.id-type=0
-mybatis-plus.global-config.field-strategy=2
-mybatis-plus.global-config.db-column-underline=true
-mybatis-plus.global-config.capital-mode=true
-mybatis-plus.global-config.refresh-mapper=true
-
-#the common
-spring.application.name=service-a
-server.port=8001
-
-#cas config
-spring.cas.sign-out-filters=/logout
-spring.cas.auth-filters=/*
-spring.cas.validate-filters=/*
-spring.cas.request-wrapper-filters=/*
-spring.cas.assertion-filters=/*
-spring.cas.cas-server-login-url=https://leannain.com:8443/cas/login
-spring.cas.cas-server-url-prefix=https://leannain.com:8443/cas
-spring.cas.redirect-after-validation=true
-spring.cas.use-session=true
-spring.cas.server-name=http://leannain.com:8001
+server.port=8081
+spring.application.name=cas_demo
